{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 16,
  "lineage": "9fde7e46-7564-3c8e-dcfb-91ebd0a893ac",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0476f2ee0a10d89bc",
            "arn": "arn:aws:ec2:us-east-1:920835814440:instance/i-0d6ba695a989d4c7f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d6ba695a989d4c7f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vmiller-tf",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-02b2adeef620dd5ff"
              }
            ],
            "primary_network_interface_id": "eni-02b2adeef620dd5ff",
            "private_dns": "ip-172-31-6-244.ec2.internal",
            "private_ip": "172.31.6.244",
            "public_dns": "ec2-44-204-206-109.compute-1.amazonaws.com",
            "public_ip": "44.204.206.109",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b0e9d66270fa9174",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_ssh_sg1",
              "allow_www_sg1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-d64e26b2",
            "tags": {
              "Name": "hostileadminweb"
            },
            "tags_all": {
              "Name": "hostileadminweb"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0287066e51da7a281",
              "sg-04f602109e166cf06"
            ]
          },
          "dependencies": [
            "aws_network_interface.eni1",
            "data.aws_ami.latest-amzn2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0476f2ee0a10d89bc",
            "arn": "arn:aws:ec2:us-east-1:920835814440:instance/i-0c6cb176abc67cafa",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c6cb176abc67cafa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vmiller-tf",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0baca2c9de80719c0"
              }
            ],
            "primary_network_interface_id": "eni-0baca2c9de80719c0",
            "private_dns": "ip-172-31-90-141.ec2.internal",
            "private_ip": "172.31.90.141",
            "public_dns": "ec2-54-157-44-118.compute-1.amazonaws.com",
            "public_ip": "54.157.44.118",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b8c67b606b513ca3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_ssh_sg1",
              "allow_www_sg1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-4490356b",
            "tags": {
              "Name": "hostileadminweb"
            },
            "tags_all": {
              "Name": "hostileadminweb"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0287066e51da7a281",
              "sg-04f602109e166cf06"
            ]
          },
          "dependencies": [
            "aws_network_interface.eni2",
            "data.aws_ami.latest-amzn2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "eni1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:920835814440:network-interface/eni-02b2adeef620dd5ff",
            "attachment": [
              {
                "attachment_id": "eni-attach-0517e694bce05aa8a",
                "device_index": 0,
                "instance": "i-0d6ba695a989d4c7f"
              }
            ],
            "id": "eni-02b2adeef620dd5ff",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:90:5a:15:21:d3",
            "owner_id": "920835814440",
            "private_dns_name": "ip-172-31-6-244.ec2.internal",
            "private_ip": "172.31.6.244",
            "private_ip_list": [
              "172.31.6.244"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "172.31.6.244"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0287066e51da7a281",
              "sg-04f602109e166cf06"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-d64e26b2"
          },
          "dependencies": [
            "aws_security_group.allow_ssh_sg1",
            "aws_security_group.allow_www_sg1"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "eni2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:920835814440:network-interface/eni-0baca2c9de80719c0",
            "attachment": [
              {
                "attachment_id": "eni-attach-0205ff48b8ee536a8",
                "device_index": 0,
                "instance": "i-0c6cb176abc67cafa"
              }
            ],
            "id": "eni-0baca2c9de80719c0",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:fa:e5:fa:57:01",
            "owner_id": "920835814440",
            "private_dns_name": "ip-172-31-90-141.ec2.internal",
            "private_ip": "172.31.90.141",
            "private_ip_list": [
              "172.31.90.141"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "172.31.90.141"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0287066e51da7a281",
              "sg-04f602109e166cf06"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-4490356b"
          },
          "dependencies": [
            "aws_security_group.allow_ssh_sg1",
            "aws_security_group.allow_www_sg1"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_sg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:920835814440:security-group/sg-0287066e51da7a281",
            "description": "Allow inbound ssh traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0287066e51da7a281",
            "ingress": [
              {
                "cidr_blocks": [
                  "71.191.158.16/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_sg1",
            "name_prefix": "",
            "owner_id": "920835814440",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh_sg1"
            },
            "tags_all": {
              "Name": "allow_ssh_sg1"
            },
            "timeouts": null,
            "vpc_id": "vpc-fe066986"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_www_sg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:920835814440:security-group/sg-04f602109e166cf06",
            "description": "Allow inbound web traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04f602109e166cf06",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_www_sg1",
            "name_prefix": "",
            "owner_id": "920835814440",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_www_sg1"
            },
            "tags_all": {
              "Name": "allow_www_sg1"
            },
            "timeouts": null,
            "vpc_id": "vpc-fe066986"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:920835814440:loadbalancer/app/alb1/79a57a8241cb5d09",
            "arn_suffix": "app/alb1/79a57a8241cb5d09",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb1-184844836.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:920835814440:loadbalancer/app/alb1/79a57a8241cb5d09",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb1",
            "security_groups": [
              "sg-04f602109e166cf06"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-4490356b"
              },
              {
                "subnet_id": "subnet-d64e26b2"
              }
            ],
            "subnets": [
              "subnet-4490356b",
              "subnet-d64e26b2"
            ],
            "tags": {
              "Environment": "Test",
              "Name": "alb1"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "alb1"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-fe066986",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.allow_www_sg1"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:920835814440:listener/app/alb1/79a57a8241cb5d09/f47f02742ae77695",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:920835814440:targetgroup/pref-20230729020036469900000001/3a3e297cd1a724de",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:920835814440:listener/app/alb1/79a57a8241cb5d09/f47f02742ae77695",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:920835814440:loadbalancer/app/alb1/79a57a8241cb5d09",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Environment": "Test"
            },
            "tags_all": {
              "Environment": "Test"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.web1",
            "aws_instance.web2",
            "aws_network_interface.eni1",
            "aws_network_interface.eni2",
            "aws_security_group.allow_ssh_sg1",
            "aws_security_group.allow_www_sg1",
            "data.aws_ami.latest-amzn2",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:920835814440:targetgroup/pref-20230729020036469900000001/3a3e297cd1a724de",
            "arn_suffix": "targetgroup/pref-20230729020036469900000001/3a3e297cd1a724de",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:920835814440:targetgroup/pref-20230729020036469900000001/3a3e297cd1a724de",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "pref-20230729020036469900000001",
            "name_prefix": "pref-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "Test",
              "Name": "pref-"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "pref-"
            },
            "target_type": "instance",
            "vpc_id": "vpc-fe066986"
          },
          "dependencies": [
            "aws_instance.web1",
            "aws_instance.web2",
            "aws_network_interface.eni1",
            "aws_network_interface.eni2",
            "aws_security_group.allow_ssh_sg1",
            "aws_security_group.allow_www_sg1",
            "data.aws_ami.latest-amzn2"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0.0",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:920835814440:targetgroup/pref-20230729020036469900000001/3a3e297cd1a724de-20230729020037499900000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:920835814440:targetgroup/pref-20230729020036469900000001/3a3e297cd1a724de",
            "target_id": "i-0d6ba695a989d4c7f"
          },
          "dependencies": [
            "aws_instance.web1",
            "aws_instance.web2",
            "aws_network_interface.eni1",
            "aws_network_interface.eni2",
            "aws_security_group.allow_ssh_sg1",
            "aws_security_group.allow_www_sg1",
            "data.aws_ami.latest-amzn2",
            "module.alb.aws_lb_target_group.main"
          ]
        },
        {
          "index_key": "0.1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:920835814440:targetgroup/pref-20230729020036469900000001/3a3e297cd1a724de-20230729020037444100000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:920835814440:targetgroup/pref-20230729020036469900000001/3a3e297cd1a724de",
            "target_id": "i-0c6cb176abc67cafa"
          },
          "dependencies": [
            "aws_instance.web1",
            "aws_instance.web2",
            "aws_network_interface.eni1",
            "aws_network_interface.eni2",
            "aws_security_group.allow_ssh_sg1",
            "aws_security_group.allow_www_sg1",
            "data.aws_ami.latest-amzn2",
            "module.alb.aws_lb_target_group.main"
          ]
        }
      ]
    }
  ]
}